--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 Django==3.2.9
-djangorestframework==3.12.
+djangorestframework==3.12.4
+djangorestframework-jwt==1.11.0
 pytest==6.0.1
+PyJWT==1.7.1
